# cebollin-backend

./: .coverage  .dockerignore  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 560d303625c7_add_plots_table_and_link_to_diagnosis_.py  6b9c6a79e66a_create_initial_tables.py  94f5be473704_fix_circular_dependency_on_treatment_.py  bff543f46bd3_add_predictions_table.py  f15fc6781ec4_add_treatment_plans_table_and_.py
src/cebollin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cebollin/application/: dto.py
src/cebollin/domain/: enums.py
src/cebollin/infrastructure/: config.py
src/cebollin/infrastructure/services/: ai_model_client.py  llm_client.py
src/cebollin/presentation/: auth.py  container.py  main.py
src/cebollin/presentation/api/v1/: plots_router.py  test_users_router.py  treatment_router.py
test/: conftest.py
test/infrastructure/persistence/: test_sqlalchemy_repositories.py
tests/: conftest.py
tests/domain/: test_entities.py
tests/infrastructure/persistence/: test_sqlalchemy_repositories.py
tests/presentation/api/v1/: test_users_router.py
